Final of Preprocessing stade

--- a/Liberty_AI.ipynb
+++ b/Liberty_AI.ipynb
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,6 +715,58 @@
     "# X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 0)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2) "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature Scaling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "sc = StandardScaler()\n",
+    "X_train = sc.fit_transform(X_train)\n",
+    "X_test = sc.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.3609886 ,  0.7589427 ],\n",
+       "       [ 0.63137948,  0.84480955],\n",
+       "       [-0.37772197,  1.23979704],\n",
+       "       ...,\n",
+       "       [ 0.53543433, -1.36025105],\n",
+       "       [-0.78498566,  1.6519579 ],\n",
+       "       [-0.0643906 ,  1.69317399]])"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
