--- a/Liberty_AI.ipynb
+++ b/Liberty_AI.ipynb
@@ -762,6 +762,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -- Data Preprocessing ------------------------------------------------------------------------------------"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
